test/runtime-integration-tests/TestPrograms/Syntax/Invalid/comprehension_legacy_in_syntax.5th
// This file should fail to parse: legacy 'in' syntax
main(): int { 
    xs: [int] = [1, 2, 3]; 
    ys: [int] = [x in xs]; 
    return 0; 
}
